<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AlpacaGetCoverState" Id="{f390e5bb-41cf-495c-bcb1-ab894c8967d4}">
    <Declaration><![CDATA[TYPE ST_AlpacaGetCoverState EXTENDS ST_AlpacaGetDint :
STRUCT
    eValue : E_AlpacaCoverState;
    sValue : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>