<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AlpacaPutMove" Id="{4f821259-0202-4c1b-8825-4a94c07ab8d3}">
    <Declaration><![CDATA[TYPE ST_AlpacaPutMove EXTENDS ST_AlpacaPutRequest:
STRUCT
    // inputs
    i_Position : DINT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>