<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AlpacaPutSlewToAltAz" Id="{7722a838-b14a-4fb1-83ca-57fbe6891db3}">
    <Declaration><![CDATA[TYPE ST_AlpacaPutSlewToAltAz EXTENDS ST_AlpacaPutRequest:
STRUCT
    // inputs
    i_lrAltitude    : LREAL;
    i_lrAzimuth     : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>