<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_AlpacaPutSlewToCoordinates" Id="{4374af87-47fe-4466-9ffa-8f281eca0146}">
    <Declaration><![CDATA[TYPE ST_AlpacaPutSlewToCoordinates EXTENDS ST_AlpacaPutRequest:
STRUCT
    // inputs
    i_lrRightAscension  : LREAL;
    i_lrDeclination     : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>