<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_AsaTelescopeRequests" Id="{2dc73c60-aa7f-4f79-a173-eb3bec6c3ad8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
TYPE E_AsaTelescopeRequests :
(
    // the data below gets read continuously in order from top to bottom
    RIGHT_ASCENSION := 0,
    DECLINATION,
    AZIMUTH,
    ALTITUDE,
    SLEWING,
    TARGET_RIGHT_ASCENSION,
    TARGET_DECLINATION,
    M2_POSITION,
    COVER_STATE,
    
    // COMMANDS
    // ==================================================================
    // special state meaning no state requested
    NO_COMMAND,
    // add all commands below (order is not relevant)
    ABORT_SLEW,
    SLEW_TO_ALTAZ,
    SLEW_TO_COORDINATES,
    OPEN_COVER,
    CLOSE_COVER,
    TRACKING,
    M2_MOVE
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>